@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<ivy-module version="1.4">
+    <info organisation="org.apache.ivyde" module="ivydetest-workspaceresolver-lib" revision="1.1.20100901120000-dev" status="integration" publication="20080811152510" />
+    <configurations>
+        <conf name="default" />
+    </configurations>
+    <publications>
+        <artifact name="workspaceresolver-lib" type="jar" ext="jar" conf="default" />
+    </publications>
+    <dependencies>
+        <dependency org="org.apache.ivyde" name="ivydetest-workspaceresolver-common" rev="1.1.20100901120000-dev" revConstraint="[1.1,1.2)" conf="default" />
+    </dependencies>
+</ivy-module>
