@@ -1,0 +1,15 @@
+<ivysettings>
+    <caches defaultCacheDir="${ivy.settings.dir}/../cache-fakerepo" useOrigin="false" checkUpToDate="true" />
+    <settings defaultResolver="chain" />
+    <resolvers>
+        <filesystem name="fakerepo" checkmodified="true">
+            <ivy pattern="${ivy.settings.dir}/../fakerepo/[organisation]/[module]/ivy-[revision].xml"/>
+            <artifact pattern="${ivy.settings.dir}/../fakerepo/[organisation]/[module]/[type]s/[artifact]-[revision].[ext]"/>
+        </filesystem>
+        <ibiblio name="ibiblio" m2compatible="true" />
+        <chain name="chain">
+        	<resolver ref="fakerepo" />
+        	<resolver ref="ibiblio" />
+        </chain>
+    </resolvers>
+</ivysettings>
