@@ -25,6 +25,7 @@
 - FIX: conf attributes must not be null (IVYDE-209) (thanks to Ivica Loncar)
 - FIX: Errors are not reported when multiple resolve are launched (IVYDE-219)
 - FIX: Ivy settings file cannot be loaded via http url (IVYDE-218)
+- FIX: The workspace resolver doesn't resolve conflicts correctly (IVYDE-212)
 
   version 2.0.0 final
 ==========================
